manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: emp-api
      version: "1.0"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: emp-api
        version: "1.0"
    spec:
      containers:
      - name: emp-api
        image: "study4.azurecr.io/crud-aspnetcore-api:latest"
        ports:
        - name: emp-api-port
          containerPort: 80
