manifests/deployment-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: emp-api-service
spec:
  ports:
  - name: emp-api-private-port
    port: 80
    targetPort: emp-api-port
  selector:
    app: emp-api
