manifests/deployment-sqlserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-mssql
  namespace: hr-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-mssql
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: hr-mssql
    spec:
      containers:
      - name: hr-mssql
        image: "mcr.microsoft.com/mssql/server:2017-latest"
        ports:
        - name: sqlserver
          containerPort: 1433
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: hr-mssql
  namespace: hr-system
  labels: 
    app: hr-mssql
spec:
  ports:
  - name: tcp
    port: 1433
  selector:
    app: hr-mssql
