manifests/istio-gateway.yaml
# virtualservice
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emp-api
  namespace: hr-system
spec:
  hosts:
  - "*"
  gateways:
  - emp-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: emp-api.hr-system.svc.cluster.local
        port:
          number: 80
---
# gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: emp-api-gateway
  namespace: hr-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
